--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <div id="wrapper">
+  <h1>Hello Kateus</h1>
+  <p>I'm not quite done yet, maybe come back and check later?</p>
 </body>
 </html>
