--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <div id="wrapper">
-  <h1>Hello Kateus</h1>
-  <p>I'm not quite done yet, maybe come back and check later?</p>
+    <h1>Hello Kateus</h1>
+    <p>I'm not quite done yet, maybe come back and check later?</p>
+  </div>
 </body>
 </html>
