--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
   <div id="wrapper">
-    <h1>Hello Kateus</h1>
-    <p>I'm not quite done yet, maybe come back and check later?</p>
+    <div id="textwrap">
+      <h1>Hello Kateus</h1>
+      <p>I'm not quite done yet, maybe come back and check later?</p>
+    </div>
   </div>
 </body>
 </html>
